Feature: extracting images

--- a/readme.me
+++ b/readme.me
@@ -1,11 +1,35 @@
 
+
+- Train Watson to Recognize
+  - Wonder Woman Tiara / Poster
+- Speech to Text
+  - Checkout the synopsis
+- Associate Wonder Woman tiara to the movie
+- Retrieve Location from Phone
+- Display
+  - Ticket Information related to location and movie
+  - tweet about the video saying it has great content related to the movie
+
 # Gameplan
 
-- WebRTC Video sent to Kurento
-- Kurento video sent to watson
+- audio is sent to watson speech to text
+- text is checked against triggers
+- For each trigger
+  - A super hero related video modifier is applied to the video
+- Feed video to watchers
+
+- take the data related to
+  - how many times its been triggered
+  - how many views per trigger
+
+- When the user triggers the audio
+  - A super
+
+
+# Gameplan - Canceled
+
 - Watson recieves video, returns information
 - with information, check "triggers"
 - for each trigger
   - Apply Changes to video
 - Feed video to connected clients
-
